typescript/checker/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithSubtypeObjectOnCallSignature.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            96,
        ),
        hi: BytePos(
            98,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithSubtypeObjectOnCallSignature.ts:9:5
  |
9 | var a1: { fn(): void };
  |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            120,
        ),
        hi: BytePos(
            122,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithSubtypeObjectOnCallSignature.ts:10:5
   |
10 | var b1: { fn(): void };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            145,
        ),
        hi: BytePos(
            147,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithSubtypeObjectOnCallSignature.ts:12:5
   |
12 | var a2: { fn(a: number, b: string): void };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            189,
        ),
        hi: BytePos(
            191,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithSubtypeObjectOnCallSignature.ts:13:5
   |
13 | var b2: { fn(a: number, b: string): void };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            234,
        ),
        hi: BytePos(
            236,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithSubtypeObjectOnCallSignature.ts:15:5
   |
15 | var a3: { fn(a: number, b: string): void };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            278,
        ),
        hi: BytePos(
            280,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithSubtypeObjectOnCallSignature.ts:16:5
   |
16 | var b3: { fn(a: number): void };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            312,
        ),
        hi: BytePos(
            314,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithSubtypeObjectOnCallSignature.ts:18:5
   |
18 | var a4: { fn(a: number, b: string): void };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            356,
        ),
        hi: BytePos(
            358,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithSubtypeObjectOnCallSignature.ts:19:5
   |
19 | var b4: { fn(): void };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            381,
        ),
        hi: BytePos(
            383,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithSubtypeObjectOnCallSignature.ts:21:5
   |
21 | var a5: { fn(a: Base): void };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            412,
        ),
        hi: BytePos(
            414,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithSubtypeObjectOnCallSignature.ts:22:5
   |
22 | var b5: { fn(a: Derived): void };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            447,
        ),
        hi: BytePos(
            449,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithSubtypeObjectOnCallSignature.ts:24:5
   |
24 | var a6: { fn(a: Derived, b: Base): void };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            490,
        ),
        hi: BytePos(
            492,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithSubtypeObjectOnCallSignature.ts:25:5
   |
25 | var b6: { fn(a: Base, b: Derived): void };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            534,
        ),
        hi: BytePos(
            536,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithSubtypeObjectOnCallSignature.ts:27:5
   |
27 | var a7: { fn(): void };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            558,
        ),
        hi: BytePos(
            560,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithSubtypeObjectOnCallSignature.ts:28:5
   |
28 | var b7: { fn(): Base };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            583,
        ),
        hi: BytePos(
            585,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithSubtypeObjectOnCallSignature.ts:30:5
   |
30 | var a8: { fn(): Base };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            607,
        ),
        hi: BytePos(
            609,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithSubtypeObjectOnCallSignature.ts:31:5
   |
31 | var b8: { fn(): Base };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            632,
        ),
        hi: BytePos(
            634,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithSubtypeObjectOnCallSignature.ts:33:5
   |
33 | var a9: { fn(): Base };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            656,
        ),
        hi: BytePos(
            658,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithSubtypeObjectOnCallSignature.ts:34:5
   |
34 | var b9: { fn(): Derived };
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            684,
        ),
        hi: BytePos(
            687,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithSubtypeObjectOnCallSignature.ts:36:5
   |
36 | var a10: { fn(a?: Base): void };
   |     ^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            717,
        ),
        hi: BytePos(
            720,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithSubtypeObjectOnCallSignature.ts:37:5
   |
37 | var b10: { fn(a?: Derived): void };
   |     ^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            754,
        ),
        hi: BytePos(
            757,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithSubtypeObjectOnCallSignature.ts:39:5
   |
39 | var a11: { fn(...a: Base[]): void };
   |     ^^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            791,
        ),
        hi: BytePos(
            794,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/comparisonOperator/comparisonOperatorWithSubtypeObjectOnCallSignature.ts:40:5
   |
40 | var b11: { fn(...a: Derived[]): void };
   |     ^^^

